# Modular-equations

./: Cargo.toml  README.md  RELEASES.md
src/: lib.rs  main.rs  parser.rs  utils.rs
src/arith/: mod.rs  tests.rs
src/elliptic/: mod.rs  tests.rs
src/factor/: mod.rs  tests.rs
src/lin/: mod.rs  tests.rs
src/prime/: mod.rs  tests.rs
src/quad/: mod.rs  tests.rs
tests/: integ_test.rs
