[package]
name = "modular_equations"
version = "1.0.1"
authors = ["Elmo Moilanen"]
edition = "2021"
license = "CC0-1.0"

description = "Program to solve quadratic and linear modular equations."

keywords = ["modular-arithmetic", "congruence", "linear-equations", "quadratic-equations"]
categories = ["mathematics"]

repository = "https://github.com/elmomoilanen/Modular-equations"
readme = "README.md"

exclude = [".github"]

[profile.dev]
opt-level = 3
overflow-checks = true

[profile.test]
opt-level = 3
overflow-checks = false

[profile.release]
opt-level = 3

[dependencies]
num = "0.4"
rand = "0.8"
